# swagger.json
@@ -3,38 +3,30 @@
   "info": {
     "description": "",
     "version": "Vol.1",
-    "title": "Swagger Bank_Account"
+    "title": "Swagger Student Login"
   },
-  "host": "localhost:3000",
+  "host": "localhost:8000",
   "basePath": "/",
   "tags": [
     {
-      "name": "Deposit Money",
-      "description": "ฝากเงิน"
+      "name": "Student Login",
+      "description": "เข้าสู่ระบบ"
     },
     {
-      "name": "Withdraw Money",
-      "description": "ถอนเงิน"
-    },
-    {
-      "name": "Transfer Money",
-      "description": "โอนเงิน"
-    },
-    {
-      "name": "Check Account Balance",
-      "description": "เช็คยอดคงเหลือ"
+      "name": "Login Report",
+      "description": "รายงานจำนวนนักเรียนในระบบ"
     }
   ],
   "schemes": [
     "http"
   ],
   "paths": {
-    "/deposit": {
+    "/login": {
       "post": {
         "tags": [
-          "Deposit Money"
+          "Student Login"
         ],
-        "summary": "ฝากเงินเข้าบัญชีธนาคาร",
+        "summary": "ล็อกอินเข้าสู่ระบบ",
         "description": "",
         "consumes": [
           "application/x-www-form-urlencoded"
@@ -42,24 +34,17 @@
         "parameters": [
           {
             "in": "formData",
-            "name": "account_no",
-            "description": "เลขที่บัญชี",
-            "default": 2562342110001,
+            "name": "email",
+            "description": "อีเมลภาค",
+            "default": "62050001@cskmitl.ac.th",
             "type": "string"
           },
           {
             "in": "formData",
             "name": "password",
-            "description": "รหัสบัญชี",
-            "default": 6969,
+            "description": "รหัสผ่าน",
+            "default": 12345678,
             "type": "string"
-          },
-          {
-            "in": "formData",
-            "name": "amount",
-            "description": "จำนวนเงินที่จะฝาก",
-            "type": "number",
-            "default": 500
           }
         ],
         "responses": {
@@ -72,7 +57,7 @@
                 }
               },
               "example": {
-                "message": "ฝากเงินเรียบร้อย"
+                "message": "Login Success"
               }
             }
           },
@@ -86,10 +71,10 @@
               },
               "example": [
                 {
-                  "message": "กรุณาฝากเงิน 100 บาท ขึ้นไป"
+                  "message": "Don't have this account please Sign Up"
                 },
                 {
-                  "message": "ไม่สามารถฝากเงินที่เป็นรูปแบบเหรียญได้ กรุณาใส่จำนวนเงินในรูปแบบธนบัตร 100 บาท ขึ้นไป"
+                  "message": "Already Login"
                 }
               ]
             }
@@ -103,45 +88,17 @@
                 }
               },
               "example": {
-                "message": "รหัสผ่านไม่ถูกต้อง"
+                "message": "Wrong Password"
               }
             }
           }
         }
       }
     },
-    "/withdraw": {
-      "post": {
+    "/report": {
+      "get": {
         "tags": [
-          "Withdraw Money"
-        ],
-        "summary": "ถอนเงินออกจากบัญชีธนาคาร",
-        "description": "",
-        "consumes": [
-          "application/x-www-form-urlencoded"
-        ],
-        "parameters": [
-          {
-            "in": "formData",
-            "name": "account_no",
-            "description": "เลขที่บัญชี",
-            "default": 2562342110001,
-            "type": "string"
-          },
-          {
-            "in": "formData",
-            "name": "password",
-            "description": "รหัสบัญชี",
-            "default": 6969,
-            "type": "string"
-          },
-          {
-            "in": "formData",
-            "name": "amount",
-            "description": "จำนวนเงินที่จะถอน",
-            "type": "number",
-            "default": 500
-          }
+          "Login Report"
         ],
         "responses": {
           "200": {
@@ -153,177 +110,7 @@
                 }
               },
               "example": {
-                "message": "ถอนเงินเรียบร้อย"
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "schema": {
-              "properties": {
-                "message": {
-                  "type": "string"
-                }
-              },
-              "example": [
-                {
-                  "message": "กรุณาถอนเงินไม่เกินจำนวนเงินที่คงเหลือในบัญชี หรือ ไม่เกินครั้งละ 20000 บาท"
-                },
-                {
-                  "message": "ไม่สามารถถอนเงินที่เป็นรูปแบบเหรียญได้ กรุณาใส่จำนวนเงินในรูปแบบธนบัตร 100 บาท ขึ้นไป"
-                }
-              ]
-            }
-          },
-          "403": {
-            "description": "Forbidden",
-            "schema": {
-              "properties": {
-                "message": {
-                  "type": "string"
-                }
-              },
-              "example": {
-                "message": "รหัสผ่านไม่ถูกต้อง"
-              }
-            }
-          }
-        }
-      }
-    },
-    "/transfer": {
-      "post": {
-        "tags": [
-          "Transfer Money"
-        ],
-        "summary": "โอนเงินเข้าบัญชีธนาคาร",
-        "description": "",
-        "consumes": [
-          "application/x-www-form-urlencoded"
-        ],
-        "parameters": [
-          {
-            "in": "formData",
-            "name": "from_account",
-            "description": "โอนเงินจากเลขที่บัญชี",
-            "default": 2562342110001,
-            "type": "string"
-          },
-          {
-            "in": "formData",
-            "name": "password",
-            "description": "รหัสบัญชี",
-            "default": 6969,
-            "type": "string"
-          },
-          {
-            "in": "formData",
-            "name": "to_account",
-            "description": "โอนเงินไปยังเลขที่บัญชี",
-            "default": 2562342110002,
-            "type": "string"
-          },
-          {
-            "in": "formData",
-            "name": "amount",
-            "description": "จำนวนเงินที่จะโอน",
-            "type": "number",
-            "default": 500
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "properties": {
-                "message": {
-                  "type": "string"
-                }
-              },
-              "example": {
-                "message": "โอนเงินเรียบร้อย"
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "schema": {
-              "properties": {
-                "message": {
-                  "type": "string"
-                }
-              },
-              "example": {
-                "message": "กรุณาโอนเงินไม่เกินจำนวนเงินที่คงเหลือในบัญชี หรือ ไม่เกินครั้งละ 1,000,000 บาท"
-              }
-            }
-          },
-          "403": {
-            "description": "Forbidden",
-            "schema": {
-              "properties": {
-                "message": {
-                  "type": "string"
-                }
-              },
-              "example": {
-                "message": "รหัสผ่านไม่ถูกต้อง"
-              }
-            }
-          }
-        }
-      }
-    },
-    "/checkBalance": {
-      "post": {
-        "tags": [
-          "Check Account Balance"
-        ],
-        "summary": "เช็คยอดเงินคงเหลือในบัญชีธนาคาร",
-        "description": "",
-        "consumes": [
-          "application/x-www-form-urlencoded"
-        ],
-        "parameters": [
-          {
-            "in": "formData",
-            "name": "account_no",
-            "description": "เลขที่บัญชี",
-            "default": 2562342110001,
-            "type": "string"
-          },
-          {
-            "in": "formData",
-            "name": "password",
-            "description": "รหัสบัญชี",
-            "default": 6969,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "properties": {
-                "message": {
-                  "type": "number"
-                }
-              },
-              "example": {
-                "balance": "35,285.53"
-              }
-            }
-          },
-          "403": {
-            "description": "Forbidden",
-            "schema": {
-              "properties": {
-                "message": {
-                  "type": "string"
-                }
-              },
-              "example": {
-                "message": "รหัสผ่านไม่ถูกต้อง"
+                "message": "Create Report Success"
               }
             }
           }
